# MicroJS

./: CMakeLists.txt  README.md  main.js  project_structure.drawio
src/: arm32.cmake  third-party-libs-version.md
src/jerryscript/jerry-port/unix/: jerry-port-unix-date.c
src/port/STM32F411CEU6_PICO/: CMakeLists.txt  FreeRTOSConfig.h  common.h  compile_options.cmake  jerryscript_port.c  jerryscript_port.h  letter_shell_port.c  letter_shell_port.h  xmodem_port.c  xmodem_port.h
src/port/STM32F411CEU6_PICO/STM32CubeMX_generate/: .mxproject  CMakeLists.txt  STM32CubeMX_generate.ioc  startup_stm32f411xe.s  stm32f411ceux_flash.ld
src/port/STM32F411CEU6_PICO/STM32CubeMX_generate/Core/Inc/: led_task.h
src/port/STM32F411CEU6_PICO/STM32CubeMX_generate/Core/Src/: led_task.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/xmodem/: CMakeLists.txt  xmodem.c  xmodem.h
